--- a/front/Styles/Login.css
+++ b/front/Styles/Login.css
@@ -72,7 +72,6 @@ h1 {
   text-align: center;
   margin-bottom: 2rem;
   font-size: 2rem;
-  text-shadow: 0 0 10px rgba(0, 224, 255, 0.5);
 }
 
 .login-container {
@@ -108,7 +107,7 @@ h1 {
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  transform: scaleX(-1); /* Espelhar a imagem da câmera */
+  transform: scaleX(-1);
 }
 
 .scan-animation-overlay {
