--- a/front/Style/Emprestimos.css
+++ b/front/Style/Emprestimos.css
@@ -597,7 +597,7 @@ body.dark-mode .status-delayed {
   .menu-item:hover,
   .menu-item.active {
     border-left: none;
-    border-bottom: 4px solid var(--cor-perigo); /* CORRIGIDO (era --cor-fundo) */
+    border-bottom: 4px solid var(--cor-fundo); /* CORRIGIDO (era --cor-fundo) */
     background-color: transparent;
   }
   /* === FIM DA CORREÇÃO === */
